[tool.poetry]
name = "tilt_logger"
version = "0.1.0"
description = "TILT to Pg logging tool"
authors = ["flocknroll <dosso.florent@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiopg = "^1.3.4"
python-dateutil = "^2.8.2"
aioblescan = { git = "https://github.com/flocknroll/aioblescan" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
